--- a/index.html
+++ b/index.html
@@ -194,24 +194,24 @@
                             <div class="card">
                                 <div>
                                     <div class="d-flex pt-3 pl-3">
-                                        <div><img src="https://img.icons8.com/ios-filled/50/000000/visa.png" width="60" height="80" /></div>
+                                        <div type="margin-left:10px"><img src="qr.png" width="100" height="100" style=" border-radius: 4px"/></div>
                                         <div class="mt-3 pl-2"><span class="name">Du Quan Vu</span>
-                                            <div><span class="cross">XXXX</span><span class="pin ml-2">3007</span></div>
+                                            <div><span class="cross">XXXX-XXXX-</span><span class="pin ml-2">3007</span></div>
                                         </div>
                                     </div>
                                     <div class="py-2 px-3">
                                         <div class="first pl-2 d-flex py-2">
                                             <div class="form-check"> <input type="radio" name="optradio" class="form-check-input mt-3 dot" checked> </div>
                                             <div class="border-left pl-2"><span class="head">Tổng tiền trả</span>
-                                                <div><span class="dollar">VNĐ</span><span class="amount">1.575.000</span></div>
+                                                <div><span class="tien">VNĐ</span><span class="amount">1.575.000</span></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="py-2 px-3">
                                         <div class="second pl-2 d-flex py-2">
                                             <div class="form-check"> <input type="checkbox" name="optradio" class="form-check-input mt-3 dot"> </div>
-                                            <div class="border-left pl-2"><span class="head">Tiền típ</span>
-                                                <div class="d-flex"><span class="dollar">VNĐ</span><input type="text" name="text" class="form-control ml-1" placeholder="0"></div>
+                                            <div class="border-left pl-2"><span class="head">số cmnd</span>
+                                                <div class="d-flex"><span class="tien">CMND</span><input type="text" name="text" class="form-control ml-1" placeholder="0"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -610,7 +610,7 @@
                         <h2>Nếu</h2>
                         <h2>Bạn tiếp tục đặt vé ở chúng tôi</h2>
                         <div class="pt-5 coupon"> <i>trong vòng một tháng gần nhất bạn mua</i> </div>
-                        <button class="btn rounded mt-3"><i>Đặt ngay</i></button>
+                        <button class="btn rounded mt-3" style="font-size: 20px;"><i>đặt vé để nhận ưu đãi</i></button>
                   </div>
               <div class="col-sm ">
                 <img src="banner2.png" alt="" >
@@ -630,8 +630,8 @@
                         <h1><i>NHỚ RẰNG</i><h1>
                         <h2>Hạnh phúc</h2>
                         <h2>Là một hành trình chứ không phải đích đến</h2>
-                        <div class="pt-5 coupon"> <i>chứ không phải đích đến</i> </div>
-                        <button class="btn rounded mt-3"><i>Đặt ngay</i></button>
+                        <div class="pt-5 coupon"> <i>khuyến mãi áp dựng trong tháng 6 này</i> </div>
+                        <button class="btn rounded mt-3" style="font-size: 20px;"><i>combo Đà Nẵng - Đà Lạt 1.500.000vnđ</i></button>
                   </div>
 
                 </div>
