làm lại backgoud ngầu hơn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a style="text-decoration: none" href="#yasuo" class="nav__link"><i class='bx bx-heart-circle'></i> Về chúng tôi</a>
             </div>
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class='bx bxl-microsoft' ></i>
+                    <i class='bx bxl-microsoft ' ></i>
                 </div>
                 
 
@@ -134,8 +134,8 @@
                                 </div>
                                 <!--Third Row-->
                                 <div class="row" >
-                                    <div class="col-sm-6" style="color:#c1c9da"> <input  type="date" required placeholder="mm/dd/yyyy" class="form-control datepicker"  style="font-family:Arial, FontAwesome; color:#777a80"> </div>
-                                    <div class="col-sm-6" style="color:#c1c9da"> <input type="date" required placeholder="mm/dd/yyyy" class="form-control datepicker"  style="font-family:Arial, FontAwesome; color:#777a80"> </div>
+                                    <div class="col-sm-6" style="color:#c1c9da"> <input  type="date"  placeholder="mm/dd/yyyy" class="form-control datepicker"  style="font-family:Arial, FontAwesome; color:#777a80"> </div>
+                                    <div class="col-sm-6" style="color:#c1c9da"> <input type="date"  placeholder="mm/dd/yyyy" class="form-control datepicker"  style="font-family:Arial, FontAwesome; color:#777a80"> </div>
                                 </div>
                                 <!--Fourth Row-->
                                 <div class="row mt-4">
