thêm các logo bài này coi như hoàn thành

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Team GLoser</title>
+        <title>GLoser</title>
 
         <link rel="stylesheet" href="scss/styles.css">
 
         <!-- ICONS BOXICONS -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    
+        <link rel="icon" href="logo.png" sizes="16x16" type="png"> 
 
   
 
@@ -120,13 +120,13 @@
                                 <!--Second Row-->
                                 <div class="row">
                                     <div class="col-sm-6" > <select class="browser-default custom-select mb-4" id="select" required style="color:#c1c9da">
-                                            <option value="" disabled="" selected="" style="color:#c1c9da">Sân bay</option>
+                                            <option value="" disabled="" selected="" style="color:#c1c9da">Gas đi</option>
                                             <option value="1" style="color:#777a80">Đà Nẵng</option>
                                             <option value="2" style="color:#777a80">Hà Nội</option>
                                             <option value="3" style="color:#777a80">Sài Gòn</option>
                                         </select> </div>
                                     <div class="col-sm-6"> <select class="browser-default custom-select mb-4" id="select" required style="color:#c1c9da">
-                                            <option value="" disabled="" selected="" style="color:#c1c9da" >Đến Sân bay</option>
+                                            <option value="" disabled="" selected="" style="color:#c1c9da" >Gas đến</option>
                                             <option value="1" style="color:#777a80">Đà Nẵng</option>
                                             <option value="2" style="color:#777a80">Hà Nội</option>
                                             <option value="3" style="color:#777a80">Sài Gòn</option>
@@ -610,7 +610,7 @@
                         <h2>Nếu</h2>
                         <h2>Bạn tiếp tục đặt vé ở chúng tôi</h2>
                         <div class="pt-5 coupon"> <i>trong vòng một tháng gần nhất bạn mua</i> </div>
-                        <button class="btn rounded mt-3" style="font-size: 20px;"><i>đặt vé để nhận ưu đãi</i></button>
+                        <button class="btn rounded mt-3" style="font-size: 20px;" onclick="myFunction3()"><i>đặt vé để nhận ưu đãi</i></button>
                   </div>
               <div class="col-sm ">
                 <img src="banner2.png" alt="" >
@@ -631,7 +631,7 @@
                         <h2>Hạnh phúc</h2>
                         <h2>Là một hành trình chứ không phải đích đến</h2>
                         <div class="pt-5 coupon"> <i>khuyến mãi áp dựng trong tháng 6 này</i> </div>
-                        <button class="btn rounded mt-3" style="font-size: 20px;"><i>combo Đà Nẵng - Đà Lạt 1.500.000vnđ</i></button>
+                        <button class="btn rounded mt-3" style="font-size: 20px;" onclick="myFunction4()" ><i>combo Đà Nẵng - Đà Lạt 1.500.000vnđ</i></button>
                   </div>
 
                 </div>
@@ -641,11 +641,11 @@
         
             <section class="container  bannerx " id ="bannerkhachsan" >
                 <div class="container px-4  ">
-                    <div class="row gx-2">
-                      <div class="col">
-                       <div class="p-1 border dulich bg-light">
+                    <div class="row gx-2 ">
+                      <div class="col ">
+                       <div class="p-1 border dulich bg-light ">
 
-                        <div class="row " >
+                        <div class="row  " >
                             <div class="col-sm anhdulich">
                                 <div class="container d-flex justify-content-center">
                                     <div class="card p-2 my-4"> <img src="danang1.png" height="560">
@@ -673,7 +673,7 @@
 
                        </div>
                       </div>
-                      <div class="col">
+                      <div class="col ">
                         <div class="p-1 border dulich bg-light">
  
                          <div class="row" >
@@ -861,9 +861,9 @@
 
 
                     <div class="about__social">
-                        <a href="#" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
-                        <a href="#" class="about__social-icon"><i class='bx bxl-facebook-circle'></i></a>
-                        <a href="#" class="about__social-icon"><i class='bx bxl-dribbble' ></i></a>
+                        <a href="#" class="about__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="#" class="about__social-icon" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
+                        <a href="https://github.com/vietdu/nbanbi" class="about__social-icon" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                 </div>
 
