--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         
             <div class="main-search-input-wrap"   >
                 <div class="main-search-input fl-wrap ">
-                    <div > <input type="text" value="" placeholder="Nơi bạn muốn đến..."> </div> <button  onclick="myFunctiontk()" class="main-search-button">Tìm khách sạn</button>
+                    <div > <input type="text" value="" placeholder="Nơi bạn muốn đến..." class ="nuttk"> </div> 
+                    <button  onclick="myFunctiontk()" class="main-search-button "><i class='bx bx-search-alt'style="font-size:28px;color: rgb(38, 0, 255);"></i> </button>
                 </div>
             </div>
          <div>
